--- a/project/greenvilletemplate/template.html
+++ b/project/greenvilletemplate/template.html
@@ -63,6 +63,12 @@
                 <span>Status: Pending</span>
                 <span>Updated: Yesterday</span>
             </div>
+
+            <div class="grid-row">
+                <span>Record 3</span>
+                <span>Status: Error</span>
+                <span>Updated: 2 days ago</span>
+            </div>
         </div>
     </div>
 
@@ -91,6 +97,12 @@
                 <p>Streamline workflows across your enterprise.</p>
             </a>
 
+            <a href="feature4.html" class="feature-card">
+                <img src="./images/icon4.png" alt="Feature Icon">
+                <h3>API Gateway</h3>
+                <p>Manage and secure your enterprise APIs.</p>
+            </a>
+
         </div>
     </div>
 
@@ -112,6 +124,7 @@
             <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>
             <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>
             <li><a href="https://www.espn.com" target="_blank">ESPN</a></li>
+            <li><a href="https://gamecocksonline.com/sports/mbball/cumestats/">Team Stats</a></li>
         </ul>
     </div>
 
@@ -131,7 +144,9 @@
             <tr><th>Page</th><th>Link</th><th>Updated</th></tr>
             <tr><td>Licenses</td><td><a href="mylicenses.html">MyLicenses</a></td><td>01/15/2026</td></tr>
             <tr><td>Usage</td><td><a href="mylicenselogs.html">Logs</a></td><td>01/15/2026</td></tr>
+            <tr><td>Types</td><td><a href="licenseinfo.html">LicenseInfo</a></td><td>01/15/2026</td></tr>
             <tr><td>Cart</td><td><a href="mycart.html">MyCart</a></td><td>01/15/2026</td></tr>
+            <tr><td>Reviews</td><td><a href="reviews.html">Reviews</a></td><td>01/15/2026</td></tr>
         </table>
     </div>
 
