--- a/project/greenvilletemplate/template.html
+++ b/project/greenvilletemplate/template.html
@@ -6,7 +6,7 @@
 
     <!-- Corporate Styles -->
     <link rel="stylesheet" href="./css/greenville.css">
-</head>
+    <link rel="stylesheet" href="./css/greenvillemiddle.css"></head>
 
 <body>
 
