--- a/project/greenvilletemplate/template.html
+++ b/project/greenvilletemplate/template.html
@@ -5,8 +5,9 @@
     <title>Greenville Associates | Template</title>
 
     <!-- Corporate Styles -->
+    <link rel="stylesheet" href="./css/layout.css">
     <link rel="stylesheet" href="./css/greenville.css">
-    <link rel="stylesheet" href="./css/greenvillemiddle.css"></head>
+    <link rel="stylesheet" href="./css/greenvillemiddle.css"></head> 
 
 <body>
 
