--- a/project/greenvilletemplate/template.html
+++ b/project/greenvilletemplate/template.html
@@ -9,7 +9,40 @@
     <link rel="stylesheet" href="./css/greenville.css">
     <link rel="stylesheet" href="./css/greenvillemiddle.css"></head> 
 
+</head>
 <body>
+<div class="container">
+<div class="topnav">
+    <div class="dropdown">
+        <button class="dropbtn">Menu ▼</button>
+        <div class="dropdown-content">
+            <a href="login.html">Login</a>
+            <a href="logout.html">Logout</a>
+            <a href="welcome.html">Welcome</a>
+            <a href="licenses6.html">BuyNow</a>
+            <a href="products.html">AdminProducts</a>
+            <a href="licensetypes.html">LicenseTypes</a>
+            <a href="mylicenselogs.html">LicenseLogs</a>
+            <a href="mylicenses.html">MyLicenses</a>
+            <a href="mycart.html">MyCart</a>
+            <a href="reviews.html">AllReviews</a>
+            <a href="Help.html">Help</a>
+        </div>
+    </div>
+
+    <div class="right-links">
+        <a href="index.html">Home</a>
+        <a href="userhelp.html">UserHelp</a>
+        <a href="usernotices.html">UserNotices</a>
+        <a href="login.html">Login</a>
+        <a href="logout.html">Logout</a>
+    </div>
+</div>
+
+<header>
+    <h1>Greenville Enterprise Software</h1>
+    <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
+</header>
 
 <!-- ========================= -->
 <!--        NAVIGATION         -->
