--- a/project/greenvilletemplate/template.html
+++ b/project/greenvilletemplate/template.html
@@ -6,6 +6,7 @@
 
     <!-- Corporate Styles -->
     <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/site.css">
     <link rel="stylesheet" href="./css/greenville.css">
     <link rel="stylesheet" href="./css/greenvillemiddle.css"></head> 
 
