--- a/project/greenvilletemplate/template.html
+++ b/project/greenvilletemplate/template.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./css/site.css">
     <link rel="stylesheet" href="./css/greenville.css">
     <link rel="stylesheet" href="./css/greenvillemiddle.css"></head> 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
 </head>
 <body>
