--- a/project/greenvilletemplate/template.html
+++ b/project/greenvilletemplate/template.html
@@ -33,7 +33,35 @@
         </div>
     </div>
 
-   <div class="right-links" style="display:flex; gap:20px; align-items:center;"> <md-text-button href="index.html"> <span class="material-icons">home</span> Home </md-text-button> <md-text-button href="userhelp.html"> <span class="material-icons">help_outline</span> UserHelp </md-text-button> <md-text-button href="usernotices.html"> <span class="material-icons">notifications</span> UserNotices </md-text-button> <md-text-button href="login.html"> <span class="material-icons">login</span> Login </md-text-button> <md-text-button href="logout.html"> <span class="material-icons">logout</span> Logout </md-text-button> </div>
+  <div class="right-links" style="display:flex; gap:20px; align-items:center;">
+
+    <md-text-button href="index.html">
+        <span class="material-icons">home</span>
+        Home
+    </md-text-button>
+
+    <md-text-button href="userhelp.html">
+        <span class="material-icons">help_outline</span>
+        UserHelp
+    </md-text-button>
+
+    <md-text-button href="usernotices.html">
+        <span class="material-icons">notifications</span>
+        UserNotices
+    </md-text-button>
+
+    <md-text-button href="login.html">
+        <span class="material-icons">login</span>
+        Login
+    </md-text-button>
+
+    <md-text-button href="logout.html">
+        <span class="material-icons">logout</span>
+        Logout
+    </md-text-button>
+
+</div>
+
 </div>
 
 <header>
