--- a/project/greenvilletemplate/template.html
+++ b/project/greenvilletemplate/template.html
@@ -9,7 +9,12 @@
     <link rel="stylesheet" href="./css/site.css">
     <link rel="stylesheet" href="./css/greenville.css">
     <link rel="stylesheet" href="./css/greenvillemiddle.css"></head> 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!-- Material Web Components -->
+<script type="module" src="https://esm.run/@material/web/all.js"></script>
+
+<!-- Material Icons -->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
 
 </head>
