--- a/project/greenvilletemplate/index.html
+++ b/project/greenvilletemplate/index.html
@@ -139,19 +139,19 @@
         <div class="feature-grid">
 
             <a href="feature1.html" class="feature-card">
-                <img src="./images/icon1.png" alt="Feature Icon">
+                <img src="./images/image1.png" alt="Feature Icon">
                 <h3>Analytics Dashboard</h3>
                 <p>Real‑time insights and reporting tools.</p>
             </a>
 
             <a href="feature2.html" class="feature-card">
-                <img src="./images/icon2.png" alt="Feature Icon">
+                <img src="./images/image2.png" alt="Feature Icon">
                 <h3>Identity Management</h3>
                 <p>Secure authentication and access control.</p>
             </a>
 
             <a href="feature3.html" class="feature-card">
-                <img src="./images/icon3.png" alt="Feature Icon">
+                <img src="./images/image3.png" alt="Feature Icon">
                 <h3>Automation Tools</h3>
                 <p>Streamline workflows across your enterprise.</p>
             </a>
