--- a/project/greenvilletemplate/index.html
+++ b/project/greenvilletemplate/index.html
@@ -6,10 +6,7 @@
     <!-- Material Web Components -->
     <script type="module" src="https://esm.run/@material/web/all.js"></script>
     <!-- Corporate Styles -->
-    <link rel="stylesheet" href="./css/layout.css">
-    <link rel="stylesheet" href="./css/site.css">
-    <link rel="stylesheet" href="./css/greenville.css">
-    <link rel="stylesheet" href="./css/greenvillemiddle.css"></head> 
+    <link rel="stylesheet" href="./css/greenvilletwo.css"></head> 
 
 
 <!-- Material Icons -->
