--- a/project/greenvilletemplate/index.html
+++ b/project/greenvilletemplate/index.html
@@ -154,7 +154,7 @@
             </a>
 
             <a href="feature4.html" class="feature-card">
-                <img src="./images/icon4.png" alt="Feature Icon">
+                <img src="./images/image4.png" alt="Feature Icon">
                 <h3>API Gateway</h3>
                 <p>Manage and secure your enterprise APIs.</p>
             </a>
