--- a/project/greenvilletemplate/index.html
+++ b/project/greenvilletemplate/index.html
@@ -136,25 +136,25 @@
         <div class="feature-grid">
 
             <a href="feature1.html" class="feature-card">
-                <img src="./images/image1.png" alt="Feature Icon">
+                <img src="./images/image1.png" width="50px" height="50px" alt="Feature Icon">
                 <h3>Analytics Dashboard</h3>
                 <p>Real‑time insights and reporting tools.</p>
             </a>
 
             <a href="feature2.html" class="feature-card">
-                <img src="./images/image2.png" alt="Feature Icon">
+                <img src="./images/image2.png" width="50px" height="50px" alt="Feature Icon">
                 <h3>Identity Management</h3>
                 <p>Secure authentication and access control.</p>
             </a>
 
             <a href="feature3.html" class="feature-card">
-                <img src="./images/image3.png" alt="Feature Icon">
+                <img src="./images/image3.png" width="50px" height="50px" alt="Feature Icon">
                 <h3>Automation Tools</h3>
                 <p>Streamline workflows across your enterprise.</p>
             </a>
 
             <a href="feature4.html" class="feature-card">
-                <img src="./images/image4.png" alt="Feature Icon">
+                <img src="./images/image4.png" width="50px" height="50px" alt="Feature Icon">
                 <h3>API Gateway</h3>
                 <p>Manage and secure your enterprise APIs.</p>
             </a>
