--- a/project/greenvilletemplate/index.html
+++ b/project/greenvilletemplate/index.html
@@ -207,7 +207,7 @@
 <section class="sales">
 <div class="cta" id="contact">
     <h2>Talk to Sales</h2>
-    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span><BR>
+    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span><BR><BR><BR>
     <a href="contacts.html">Contact Sales</a>
 </div>
 </section>
