--- a/project/greenvilletemplate/index.html
+++ b/project/greenvilletemplate/index.html
@@ -19,7 +19,7 @@
 <div class="container">
 <div class="topnav">
     <div class="dropdown">
-        <button class="dropbtn">Menu ▼</button>
+        <button class="dropbtn" style="background-color: black;">Menu ▼</button>
         <div class="dropdown-content">
             <a href="login.html">Login</a>
             <a href="logout.html">Logout</a>
