--- a/project/greenvilletemplate/index.html
+++ b/project/greenvilletemplate/index.html
@@ -6,8 +6,10 @@
     <!-- Material Web Components -->
     <script type="module" src="https://esm.run/@material/web/all.js"></script>
     <!-- Corporate Styles -->
+    
     <link rel="stylesheet" href="./css/greenvilletwo.css"></head> 
-
+    <link rel="stylesheet" href="./css/greenville.css"></head> 
+    <link rel="stylesheet" href="./css/layout.css"></head> 
 
 <!-- Material Icons -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
