--- a/project/greenvilletemplate/index.html
+++ b/project/greenvilletemplate/index.html
@@ -6,10 +6,8 @@
     <!-- Material Web Components -->
     <script type="module" src="https://esm.run/@material/web/all.js"></script>
     <!-- Corporate Styles -->
-    
     <link rel="stylesheet" href="./css/greenvilletwo.css"></head> 
-    <link rel="stylesheet" href="./css/greenville.css"></head> 
-    <link rel="stylesheet" href="./css/layout.css"></head> 
+
 
 <!-- Material Icons -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -139,25 +137,25 @@
 
             <a href="feature1.html" class="feature-card">
                 <img src="./images/image1.png" width="50px" height="50px" alt="Feature Icon">
-                <h3>Analytics Dashboard</h3>
+                <h3 style="text-align: center;">Analytics Dashboard</h3>
                 <p>Real‑time insights and reporting tools.</p>
             </a>
 
             <a href="feature2.html" class="feature-card">
                 <img src="./images/image2.png" width="50px" height="50px" alt="Feature Icon">
-                <h3>Identity Management</h3>
+                <h3 style="text-align: center;">Identity Management</h3>
                 <p>Secure authentication and access control.</p>
             </a>
 
             <a href="feature3.html" class="feature-card">
                 <img src="./images/image3.png" width="50px" height="50px" alt="Feature Icon">
-                <h3>Automation Tools</h3>
+                <h3 style="text-align: center;">Automation Tools</h3>
                 <p>Streamline workflows across your enterprise.</p>
             </a>
 
             <a href="feature4.html" class="feature-card">
                 <img src="./images/image4.png" width="50px" height="50px" alt="Feature Icon">
-                <h3>API Gateway</h3>
+                <h3 style="text-align: center;">API Gateway</h3>
                 <p>Manage and secure your enterprise APIs.</p>
             </a>
 
