--- a/project/greenvilletemplate/index.html
+++ b/project/greenvilletemplate/index.html
@@ -180,7 +180,7 @@
     <div class="mid-col">
         <h3>Quick Links</h3>
         <hr>
-        <ul class="quick-links">
+        <ul class="quick-links" style="display: list-item; margin-bottom: 8px;">
             <li><a href="https://www.sc.edu" target="_blank">SC Home Page</a></li>
             <li><a href="https://sc.edu/athletics/" target="_blank">SC Athletics</a></li>
             <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>
