--- a/project/greenvilletemplate/index.html
+++ b/project/greenvilletemplate/index.html
@@ -67,12 +67,11 @@
 </header>
 
 <!-- ========================= -->
-<!--        NAVIGATION         -->
+<!-- INTERIOR PAGE NAVIGATION  -->
 <!-- ========================= -->
 <nav>
-    <ul class="menu">
+    <ul class="menu" style="margin: 0 auto; max-width: 1600px;">
         <li><a href="index.html">Home</a></li>
-
         <li class="dropdown">
             <a href="#">Products ▾</a>
             <ul class="dropdown-content">
