--- a/project/greenvilletemplate/index.html
+++ b/project/greenvilletemplate/index.html
@@ -168,7 +168,7 @@
 <!-- ========================= -->
 <!--     LOWER 3‑COLUMN        -->
 <!-- ========================= -->
-<section class="middle-columns">
+<section class="middle-columns" style="background-color: lightgrey;">
 
     <!-- CENTER COLUMN: MIAMI IMAGES -->
     <div class="mid-col">
