--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
         </div>
         <div class="project-item">
             <h4>Project Task9</h4>
-            <a href="https://jssg33.github.io/usc242/project/wireframe/Wireframe.mp4"><img src="./images/TBD.png" alt="FigmaMovie"></a>
-            <h5>TBD</h5>
-            <h6>TBD</h6>
+            <a href="https://jssg33.github.io/usc242/project/greenvilletemplate/index.html"><img src="./images/templateviewtop.png" alt="FigmaMovie"></a>
+            <h5>Build Page Template</h5>
+            <h6>Page Structural Changes and Combo CSS</h6>
         </div>
         <div class="project-item">
             <h4>Project Task10</h4>
