--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="./css/site.css"> 
 <link rel="stylesheet" href="./css/layout.css"> 
-<link rel="stylesheet" href="./css/greenville.css">    
+<link rel="stylesheet" href="./css/greenville.css">  
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
 <title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
@@ -24,6 +25,7 @@
             <a href="licensetypes.html">LicenseTypes</a>
             <a href="mylicenselogs.html">LicenseLogs</a>
             <a href="mylicenses.html">MyLicenses</a>
+            <a href="testimonials.html">MyLicenses</a>
             <a href="mycart.html">MyCart</a>
             <a href="reviews.html">AllReviews</a>
             <a href="Help.html">Help</a>
@@ -433,6 +435,7 @@
 </div>
 </body>
 </html>
+
 
 
 
