--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -25,7 +25,7 @@
             <a href="licensetypes.html">LicenseTypes</a>
             <a href="mylicenselogs.html">LicenseLogs</a>
             <a href="mylicenses.html">MyLicenses</a>
-            <a href="testimonials.html">MyLicenses</a>
+            <a href="testimonials.html">Testimonials</a>
             <a href="mycart.html">MyCart</a>
             <a href="reviews.html">AllReviews</a>
             <a href="Help.html">Help</a>
@@ -435,6 +435,7 @@
 </div>
 </body>
 </html>
+
 
 
 
