--- a/project/homepage/book555.html
+++ b/project/homepage/book555.html
@@ -319,19 +319,24 @@ left:20px;
       <div class="dropdown">
         <button class="jsmenu"><img src="./images/jsmenu4.png"></button> 
         <div class="dropdown-content">
-            <a href="login.html">Login</a>
+           <div class="dropdown">
+        <button class="dropbtn">Menu ▼</button>
+           <a href="login.html">Login</a>
             <a href="logout.html">Logout</a>
             <a href="welcome.html">Welcome</a>
-            <a href="products.html">All Products</a>
+            <a href="licenses6.html">BuyNow</a>
+            <a href="products.html">AdminProducts</a>
             <a href="licensetypes.html">LicenseTypes</a>
             <a href="mylicenselogs.html">LicenseLogs</a>
             <a href="mylicenses.html">MyLicenses</a>
+            <a href="testimonials.html">MyLicenses</a>
             <a href="mycart.html">MyCart</a>
             <a href="reviews.html">AllReviews</a>
             <a href="Help.html">Help</a>
         </div>
-      </div> 
+       </div> 
       <div class="logo">&nbsp;&nbsp;MyLinkv25 - Review Parks</div>
+      </div>
     </div>
     <div class="nav-right">
       <img src="./images/bluecircle.png" id="profilephototarget" alt="User" style="cursor:pointer;" onclick="window.location.href='profile.html'" />
@@ -1188,6 +1193,7 @@ document.addEventListener('DOMContentLoaded', async () => {
 </body>
 <footer class="footer"> &copy; Greenville Associates Consulting, Inc. <br> All rights reserved.<br>  <span align="center"><a href="sitemap.html" class="sitelink">SiteMap</a></span></footer>
 </html>
+
 
 
 
