--- a/project/homepage/book555.html
+++ b/project/homepage/book555.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./css/dropmenu.css" />
   <link rel="stylesheet" href="./css/cart.css" />
   <script src="./js/bikes.js"></script>
+  <script src="./js/cart.js"></script>
   <title>Mountain Bike Parks</title>
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
@@ -894,6 +895,7 @@ document.addEventListener('DOMContentLoaded', async () => {
 </body>
 <footer class="footer"> &copy; Greenville Associates Consulting, Inc. <br> All rights reserved.<br>  <span align="center"><a href="sitemap.html" class="sitelink">SiteMap</a></span></footer>
 </html>
+
 
 
 
