--- a/project/greenvilletemplate/index.html
+++ b/project/greenvilletemplate/index.html
@@ -7,13 +7,10 @@
     <!-- Corporate Styles -->
     <link rel="stylesheet" href="./css/sites.css"></head> 
     <link rel="stylesheet" href="./css/layout.css"></head> 
-    <link rel="stylesheet" href="./css/greenville.css"></head> 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script type="module" src="https://esm.run/@material/web/all.js"></script>
+    <link rel="stylesheet" href="./css/greenville.css"></head> <!--Greenville Last Word on Colors and Styling -->
 <!-- Material Icons -->
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-
-
 </head>
 <body>
 <div class="container">
