--- a/project/homepage/cartcancel.html
+++ b/project/homepage/cartcancel.html
@@ -4,11 +4,7 @@
   <meta charset="UTF-8" />
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<link rel="stylesheet" href="./css/login.css" />
-<link rel="stylesheet" href="./css/dropmenu.css" />
- <link rel="stylesheet" href="./css/site.css"> 
-<link rel="stylesheet" href="./css/layout.css"> 
-<link rel="stylesheet" href="./css/greenville.css"> 
+<link rel="stylesheet" href="./css/greenvilletwo.css"> 
 <script src="./js/bikes.js"></script>
   <title>Cancel Reservation</title>
 
