--- a/project/homepage/cartmaster.html
+++ b/project/homepage/cartmaster.html
@@ -5,11 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<link rel="stylesheet" href="./css/login.css" />
-<link rel="stylesheet" href="./css/dropmenu.css" />
-<link rel="stylesheet" href="./css/site.css"> 
-<link rel="stylesheet" href="./css/layout.css"> 
-<link rel="stylesheet" href="./css/greenville.css"> 
+<link rel="stylesheet" href="./css/greenvilletwo.css"> 
 <script src="./js/bikes.js"></script>
 <title>Parks - User Master Summary</title>
 
