--- a/project/homepage/contacts.html
+++ b/project/homepage/contacts.html
@@ -3,9 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="./css/site.css"> 
-<link rel="stylesheet" href="./css/layout.css"> 
-<link rel="stylesheet" href="./css/greenville.css">    
+<link rel="stylesheet" href="./css/greenvilletwo.css">    
 <title>Greenville Associates Enterprise Software | UserContacts</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
