--- a/project/homepage/products.html
+++ b/project/homepage/products.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="./css/site.css"> 
-<link rel="stylesheet" href="./css/layout.css"> 
-<link rel="stylesheet" href="./css/greenville.css"> 
+<link rel="stylesheet" href="./css/grenvilletwo.css"> 
+<link rel="stylesheet" href="./css/grenvilletwo.css"> 
+<link rel="stylesheet" href="./css/grenvilletwo.css"> 
 <title>Greenville Associates Enterprise Software | Enterprise Products</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
