--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
         </div>
         <div class="project-item">
             <h4>Project Task10</h4>
-            <a href="https://jssg33.github.io/usc242/project/wireframecomplete/figmacomplete.pdf"><img src="./images/TBD.png" alt="FigmaCompletePDF"></a>
-            <h5>TBD</h5>
-            <h6>TBD</h6>
+            <a href="https://jssg33.github.io/usc242/project/homepage/index.html"><img src="./images/homepage.png" alt="HTML Complete"></a>
+            <h5>HTML Site Complate</h5>
+            <h6>HTML Final Pages</h6>
         </div>
         <div class="project-item">
             <h4>Project Task11</h4>
