--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="./css/site.css"> 
 <link rel="stylesheet" href="./css/layout.css"> 
-<link rel="stylesheet" href="./css/grenville.css">  
+<link rel="stylesheet" href="./css/greenville.css">  
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
 <title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -435,6 +435,7 @@
 </div>
 </body>
 </html>
+
 
 
 
