--- a/project/homepage/paynow2.html
+++ b/project/homepage/paynow2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Complete Payment</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="grenvilletwo.css" />
+  <link rel="stylesheet" href="greenvilletwo.css" />
   <link rel="stylesheet" href="./css/dropmenu.css" />
   <script src="./js/bikes.js"></script>
 
