--- a/project/homepage/mycart.html
+++ b/project/homepage/mycart.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="./css/grenvilletwo.css">
-<link rel="stylesheet" href="./css/grenvilletwo.css">
-<link rel="stylesheet" href="./css/grenvilletwo.css">
+<link rel="stylesheet" href="./css/greenvilletwo.css">
+<link rel="stylesheet" href="./css/greenvilletwo.css">
+<link rel="stylesheet" href="./css/greenvilletwo.css">
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <title>My Cart | Greenville Enterprise Software</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
