--- a/project/homepage/payments8.html
+++ b/project/homepage/payments8.html
@@ -5,7 +5,7 @@
   <title>Payment Page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="grenvilletwo.css" />
+  <link rel="stylesheet" href="greenvilletwo.css" />
  <link rel="stylesheet" href="./css/dropmenu.css" />
 <script src="./js/bikes.js"></script>
    <!-- Bootstrap CSS -->
