Normalizing all css

--- a/project/homepage/licensesreview6.html
+++ b/project/homepage/licensesreview6.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="greenvilletwo.css" />
-  <link rel="stylesheet" href="./css/dropmenu.css" />
+  <link rel="stylesheet" href="./css/site.css">
+<link rel="stylesheet" href="./css/layout.css">
+<link rel="stylesheet" href="./css/greenville.css">
 <script src="./js/bikes.js"></script>
 
   <title>Mountain Bike Parks - Grid View</title>
@@ -14,47 +15,7 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
   <style>
-    .table td, .table th {
-      font-size: 0.85rem;
-    }
-
-    .highlight {
-      background-color: #e0f3ff !important;
-    }
-    .selected {
-      border: 2px solid #198754;
-    }
-    .park-logo {
-      width: 40px;
-      height: 40px;
-      object-fit: contain;
-      margin-right: 8px;
-      vertical-align: middle;
-    }
-  
-#userGreeting
-{
-  display: flex;
-  justify-content: center;     /* horizontal centering */
-  align-items: center;         /* vertical centering */
-  color: white;
-  text-align: center;
-}
-#banner
-{
-background-color: lightgrey;
-height: 60px;
-vertical-align: middle;
-width: 100%;
-display: flex;
-justify-content: center;     /* horizontal centering */
-align-items: center;         /* vertical centering */
-}
-  
-#cancelBtn
-{
-width: 400px;
-}
+   
 </style>
 
 </head>
