--- a/project/homepage/logout.html
+++ b/project/homepage/logout.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./css/site.css">
+<link rel="stylesheet" href="./css/layout.css">
+<link rel="stylesheet" href="./css/greenville.css">
     <title>Logging out...</title>
     <script>
         // Clear all localStorage data
