--- a/project/homepage/reviews5.html
+++ b/project/homepage/reviews5.html
@@ -4,11 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Product Reviews</title>
-  <link rel="stylesheet" href="./css/greenvilletwo.css" />
-  <link rel="stylesheet" href="./css/dropmenu.css" />
-  <link rel="stylesheet" href="./css/greenvilletwo.css"> 
-  <link rel="stylesheet" href="./css/greenvilletwo.css"> 
-  <link rel="stylesheet" href="./css/greenvilletwo.css"> 
+  <link rel="stylesheet" href="./css/site.css">
+  <link rel="stylesheet" href="./css/layout.css">
+  <link rel="stylesheet" href="./css/greenville.css">
   <script src="./js/bikes.js"></script>
 
   <!-- Bootstrap CSS -->
@@ -17,27 +15,7 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
   <style>
-    #userGreeting {
-      text-align: center;
-      vertical-align: middle;
-      color: white;
-    }
-    #banner {
-      background-color: lightgrey;
-      height: 60px;
-      vertical-align: middle;
-      width: 100%;
-    }
-
-    #cancelBtn { width: 400px; }
-    #splash { font-size: 12pt; }
-
-    #addreview { float: left; }
-
-    button {
-      width: 120px;
-      background-color: green;
-    }
+    
   </style>
 </head>
 <body onload="checkpll(); checkUserStatus(); displayProfilePicture();">
