--- a/project/homepage/testimonials.html
+++ b/project/homepage/testimonials.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="./css/greenvilletwo.css"> 
-<link rel="stylesheet" href="./css/greenvilletwo.css"> 
-<link rel="stylesheet" href="./css/greenvilletwo.css">
+<link rel="stylesheet" href="./css/site.css">
+<link rel="stylesheet" href="./css/layout.css">
+<link rel="stylesheet" href="./css/greenville.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
 <title>Greenville Associates Enterprise Software |Testimonials Table</title>
