--- a/project/homepage/book555.html
+++ b/project/homepage/book555.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/greenvilletwo.css" />
-  <link rel="stylesheet" href="./css/dropmenu.css" />
-  <link rel="stylesheet" href="./css/cart.css" />
+  <link rel="stylesheet" href="./css/site.css" />
+  <link rel="stylesheet" href="./css/layout.css" />
+  <link rel="stylesheet" href="./css/greenville.css" />
   <script src="./js/bikes.js"></script>
   <script src="./js/cart.js"></script>
   <title>Mountain Bike Parks</title>
