--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -5,54 +5,14 @@
 <title>Products | Greenville Enterprise Software</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" href="./css/greenvilletwo.css">
-<link rel="stylesheet" href="./css/greenvilletwo.css">
-<link rel="stylesheet" href="./css/greenvilletwo.css">
+<link rel="stylesheet" href="./css/site.css">
+<link rel="stylesheet" href="./css/layout.css">
+<link rel="stylesheet" href="./css/greenville.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
 <style>
-body {
-    background: #e6e6e6 !important;
-}
 
-.card {
-    border: 1px solid #d1e7d9;
-    border-radius: 6px;
-}
-
-.card-title {
-    color: #0a2f1f;
-    font-weight: bold;
-}
-
-.welcome-columns {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    width: 85%;
-    margin: 40px auto;
-}
-
-.welcome-card {
-    flex: 1;
-    background: #ffffff;
-    border: 1px solid #d1e7d9;
-    border-radius: 6px;
-    padding: 25px;
-}
-
-.sitemap-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-.sitemap-table th,
-.sitemap-table td {
-    padding: 8px;
-    border-bottom: 1px solid #d1e7d9;
-    text-align: left;
-}
 </style>
 </head>
 
