--- a/project/homepage/mylicenselogs.html
+++ b/project/homepage/mylicenselogs.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="./css/greenvilletwo.css"> 
-<link rel="stylesheet" href="./css/greenvilletwo.css">
-<link rel="stylesheet" href="./css/greenvilletwo.css">  
+<link rel="stylesheet" href="./css/site.css">
+<link rel="stylesheet" href="./css/layout.css">
+<link rel="stylesheet" href="./css/greenville.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <title>Greenville Associates Enterprise Software | Enterprise Licensing - My Licenses Logs</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
