--- a/project/homepage/payments8.html
+++ b/project/homepage/payments8.html
@@ -5,8 +5,9 @@
   <title>Payment Page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="greenvilletwo.css" />
- <link rel="stylesheet" href="./css/dropmenu.css" />
+  <link rel="stylesheet" href="./css/site.css">
+  <link rel="stylesheet" href="./css/layout.css">
+  <link rel="stylesheet" href="./css/greenville.css">
 <script src="./js/bikes.js"></script>
    <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
