--- a/project/homepage/paynow2.html
+++ b/project/homepage/paynow2.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <title>Complete Payment</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="greenvilletwo.css" />
-  <link rel="stylesheet" href="./css/dropmenu.css" />
+  <link rel="stylesheet" href="./css/site.css">
+  <link rel="stylesheet" href="./css/layout.css">
+  <link rel="stylesheet" href="./css/greenville.css">
   <script src="./js/bikes.js"></script>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
