--- a/project/homepage/products.html
+++ b/project/homepage/products.html
@@ -3,35 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="./css/greenvilletwo.css"> 
-<link rel="stylesheet" href="./css/greenvilletwo.css"> 
-<link rel="stylesheet" href="./css/greenvilletwo.css"> 
+<link rel="stylesheet" href="./css/site.css">
+<link rel="stylesheet" href="./css/layout.css">
+<link rel="stylesheet" href="./css/greenville.css">
 <title>Greenville Associates Enterprise Software | Enterprise Products</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-    th { cursor: pointer; }
-
-    /* Prevent entire page from scrolling */
-    html, body {
-        height: 100%;
-        overflow: hidden;
-    }
-
-    /* Main content scrolls normally */
-    .container {
-        height: calc(100% - 150px); /* adjust if header height changes */
-        overflow-y: auto;
-    }
-
-    /* Only the product table scrolls */
-    .product-table-wrapper {
-        max-height: 500px;
-        overflow-y: auto;
-        overflow-x: hidden;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-    }
 </style>
 </head>
 
