--- a/project/homepage/sitemap.html
+++ b/project/homepage/sitemap.html
@@ -6,7 +6,9 @@
     <!-- Material Web Components -->
     <script type="module" src="https://esm.run/@material/web/all.js"></script>
     <!-- Corporate Styles -->
-    <link rel="stylesheet" href="./css/greenvilletwo.css"></head> 
+    <link rel="stylesheet" href="./css/site.css">
+    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/greenville.css">
 
 
 <!-- Material Icons -->
