--- a/project/homepage/userhelp.html
+++ b/project/homepage/userhelp.html
@@ -3,28 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="./css/greenvilletwo.css"> 
-<link rel="stylesheet" href="./css/greenvilletwo.css"> 
-<link rel="stylesheet" href="./css/greenvilletwo.css">    
+<link rel="stylesheet" href="./css/site.css">
+<link rel="stylesheet" href="./css/layout.css">
+<link rel="stylesheet" href="./css/greenville.css">  
 <title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        .form-control, .form-control:focus {
-            background-color: #111;
-            color: #0f0;
-            border: 1px solid #0f0;
-        }
-        .btn-custom {
-            background-color: #0f0;
-            color: #000;
-            font-weight: bold;
-        }
-        .btn-custom:hover {
-            background-color: #0c0;
-        }
-        label {
-            font-weight: bold;
-        }
+
     </style>
 </head>
 <body>
