--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="./css/greenvilletwo.css"> 
-<link rel="stylesheet" href="./css/greenvilletwo.css">
-<link rel="stylesheet" href="./css/greenvilletwo.css">  
+<link rel="stylesheet" href="./css/site.css">
+<link rel="stylesheet" href="./css/layout.css">
+<link rel="stylesheet" href="./css/greenville.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <title>Greenville Associates Enterprise Software | Enterprise Licensing - My Licenses</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +26,7 @@
             <a href="licensetypes.html">LicenseTypes</a>
             <a href="mylicenselogs.html">LicenseLogs</a>
             <a href="mylicenses.html">MyLicenses</a>
-            <a href="mycart.html">MyCart</a>
+            <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
             <a href="Help.html">Help</a>
         </div>
@@ -277,7 +277,7 @@ loadLicenses();
             <tr><td>Licenses</td><td><a href="mylicenses.html">MyLicenses</a></td><td>01/15/2026</td></tr>
             <tr><td>Usage</td><td><a href="mylicenselogs.html">MyLicenseLogs</a></td><td>01/15/2026</td></tr>
             <tr><td>Types</td><td><a href="licenseinfo.html">LicenseInfo</a></td><td>01/15/2026</td></tr>
-            <tr><td>Cart</td><td><a href="mycart.html">MyCart</a></td><td>01/15/2026</td></tr>
+            <tr><td>Cart</td><td><a href="mycart.html?uid=1">MyCart</a></td><td>01/15/2026</td></tr>
             <tr><td>TypeReviews</td><td><a href="reviews.html">Reviews</a></td><td>01/15/2026</td></tr>
         </table>
     </div>
