--- a/project/homepage/reviewpayment5.html
+++ b/project/homepage/reviewpayment5.html
@@ -80,7 +80,7 @@ width: 400px;
             <a href="licensetypes.html">LicenseTypes</a>
             <a href="mylicenselogs.html">LicenseLogs</a>
             <a href="mylicenses.html">MyLicenses</a>
-            <a href="mycart.html">MyCart</a>
+            <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
             <a href="Help.html">Help</a>
             </div>
