--- a/project/homepage/testimonials.html
+++ b/project/homepage/testimonials.html
@@ -40,7 +40,7 @@
             <a href="mylicenselogs.html">LicenseLogs</a>
             <a href="mylicenses.html">MyLicenses</a>
             <a href="testimonials.html">MyLicenses</a>
-            <a href="mycart.html">MyCart</a>
+            <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
             <a href="Help.html">Help</a>
         </div>
@@ -137,7 +137,7 @@
             <tr><td>Licenses</td><td><a href="mylicenses.html">MyLicenses</a></td><td>01/15/2026</td></tr>
             <tr><td>Usage</td><td><a href="mylicenselogs.html">MyLicenseLogs</a></td><td>01/15/2026</td></tr>
             <tr><td>Types</td><td><a href="licenseinfo.html">LicenseInfo</a></td><td>01/15/2026</td></tr>
-            <tr><td>Cart</td><td><a href="mycart.html">MyCart</a></td><td>01/15/2026</td></tr>
+            <tr><td>Cart</td><td><a href="mycart.html?uid=1">MyCart</a></td><td>01/15/2026</td></tr>
             <tr><td>TypeReviews</td><td><a href="reviews.html">Reviews</a></td><td>01/15/2026</td></tr>
         </table>
     </div>
