--- a/project/homepage/cartdetail.html
+++ b/project/homepage/cartdetail.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="./css/greenvilletwo.css"> 
+  <link rel="stylesheet" href="./css/site.css">
+  <link rel="stylesheet" href="./css/layout.css">
+  <link rel="stylesheet" href="./css/greenville.css">
   <script src="./js/bikes.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <title>Transaction Detail Review</title>
@@ -38,7 +40,7 @@
             <a href="licensetypes.html">LicenseTypes</a>
             <a href="mylicenselogs.html">LicenseLogs</a>
             <a href="mylicenses.html">MyLicenses</a>
-            <a href="mycart.html">MyCart</a>
+            <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
             <a href="Help.html">Help</a>
             </div>
