--- a/project/homepage/cartmaster.html
+++ b/project/homepage/cartmaster.html
@@ -5,7 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<link rel="stylesheet" href="./css/greenvilletwo.css"> 
+<link rel="stylesheet" href="./css/site.css">
+<link rel="stylesheet" href="./css/layout.css">
+<link rel="stylesheet" href="./css/greenville.css">
 <script src="./js/bikes.js"></script>
 <title>Parks - User Master Summary</title>
 
@@ -49,7 +51,7 @@ font-size: 12pt;
             <a href="licensetypes.html">LicenseTypes</a>
             <a href="mylicenselogs.html">LicenseLogs</a>
             <a href="mylicenses.html">MyLicenses</a>
-            <a href="mycart.html">MyCart</a>
+            <a href="mycart.html?uid=1">MyCart</a>
             <a href="reviews.html">AllReviews</a>
             <a href="Help.html">Help</a>
              </div>
