--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="./css/site.css">
 <link rel="stylesheet" href="./css/layout.css">
 <link rel="stylesheet" href="./css/greenville.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <title>Greenville Associates Enterprise Software | Enterprise Licensing - My Licenses</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
@@ -14,7 +14,7 @@
 
 </head>
 <body class="bg-light" style="background-color: black">
-<div class="gacontainer">
+<div class="container">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
