--- a/project/homepage/mylicenselogs.html
+++ b/project/homepage/mylicenselogs.html
@@ -21,8 +21,8 @@
 
 
 </head>
-<body class="bg-light" style="background-color: black">
-<div class="gacontainer">
+<body>
+<div class="container">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
