--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -13,8 +13,8 @@
 
 
 </head>
-<body class="bg-light" style="background-color: black">
-<div class="container">
+<body>
+<div class="container2">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
