updating all container references on bootstrap data grids

--- a/project/homepage/cartcancel.html
+++ b/project/homepage/cartcancel.html
@@ -68,7 +68,7 @@ width: 400px;
     </div>
   </div>
   <div align="center" id="banner"><span id="userGreeting">Welcome Guest</span></div>
-  <div class="container py-5">
+  <div class="container2 py-5">
   <h3 class="text-center mb-4">Booking Details</h3>
   <div class="card mx-auto" style="max-width: 700px;">
     <div class="card-body">
