--- a/project/homepage/licensesreview6.html
+++ b/project/homepage/licensesreview6.html
@@ -45,7 +45,7 @@
       </div>
   </div>
 <div align="center" id="banner"><span id="userGreeting">Welcome Guest</span></div>
-  <div class="container py-5">
+  <div class="container2 py-5">
     <div class="mb-3">
       <label for="stateFilter" class="form-label">Filter by State:</label>
       <select id="stateFilter" class="form-select" onchange="filterParksByState()">
