--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -11,7 +11,7 @@
 
 <style>
     /* LOGIN CARD */
-    .login-container {
+    .login-container2 {
         width: 100%;
         max-width: 450px;
         margin: 60px auto;
@@ -22,12 +22,12 @@
         text-align: center;
     }
 
-    .login-container img {
+    .login-container2 img {
         width: 140px;
         margin-bottom: 20px;
     }
 
-    .login-container label {
+    .login-container2 label {
         font-weight: bold;
         color: #0a2f1f;
         display: block;
@@ -35,7 +35,7 @@
         margin-bottom: 6px;
     }
 
-    .login-container input {
+    .login-container2 input {
         width: 100%;
         padding: 10px;
         margin-bottom: 18px;
@@ -43,7 +43,7 @@
         border-radius: 4px;
     }
 
-    .login-container button {
+    .login-container2 button {
         width: 100%;
         padding: 12px;
         background: #0a2f1f;
@@ -54,7 +54,7 @@
         cursor: pointer;
     }
 
-    .login-container button:hover {
+    .login-container2 button:hover {
         background: #145c3c;
     }
 
@@ -136,7 +136,7 @@
 
 <!-- LOGIN CARD -->
 <section>
-    <div class="login-container">
+    <div class="login-container2">
         <img src="./images/UserIcon.png" alt="User Icon">
 
         <form id="loginForm">
