--- a/project/homepage/mylicenselogs.html
+++ b/project/homepage/mylicenselogs.html
@@ -22,7 +22,7 @@
 
 </head>
 <body>
-<div class="container">
+<div class="container2">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -53,7 +53,7 @@
 </header>
 
 
-<div class="container py-8" style="margin-top: 40px";>
+<div class="container2 py-8" style="margin-top: 40px";>
   <h2 class="mb-4">License Logs</h2>
 
   <table class="table table-striped table-bordered" id="logsTable">
