--- a/project/homepage/payments8.html
+++ b/project/homepage/payments8.html
@@ -44,7 +44,7 @@
   </div>
 
   <div align="center" id="banner"><span id="userGreeting">Welcome Guest</span></div>
-<div class="container mt-5">
+<div class="container2 mt-5">
   <h2 class="mb-4">Your Cart Summary</h2>
   <table class="table table-bordered table-striped">
     <thead class="table-dark">
