--- a/project/homepage/products.html
+++ b/project/homepage/products.html
@@ -15,7 +15,7 @@
 
 <body>
 
-<div class="gacontainer">
+<div class="gacontainer2">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -128,7 +128,7 @@
         </div>
     </div>
 </div>
-<div class="gacontainer">
+<div class="gacontainer2">
 <section class="middle-columns">
 
     <div class="mid-col">
