--- a/project/homepage/reviewpayment5.html
+++ b/project/homepage/reviewpayment5.html
@@ -97,7 +97,7 @@ width: 400px;
     </div>
   <div align="center" id="banner"><span id="userGreeting">Welcome Guest</span></div>
 
-   <div class="container">
+   <div class="container2">
     <h3 class="text-center mt-4">Payment Details</h3>
     <div class="card payment-card">
       <div class="card-body" id="paymentDetails">
