--- a/project/homepage/reviews.html
+++ b/project/homepage/reviews.html
@@ -45,7 +45,7 @@
 <body class="bg-light">
 
     <div class="bigwrapper" style="background-color: black; width:100%;">
-    <div class="container py-4" style="margin-top: 40px; margin-bottom: 40px;">
+    <div class="container2 py-4" style="margin-top: 40px; margin-bottom: 40px;">
 
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2>Reviews</h2>
