--- a/project/homepage/cartmaster.html
+++ b/project/homepage/cartmaster.html
@@ -71,7 +71,7 @@ font-size: 12pt;
     </div>
 <div align="center" id="banner"><span id="userGreeting">Welcome Guest</span></div>
 
-<div class="container my-5">
+<div class="container2 my-5">
   <h1 class="mb-4">CartMaster Summary</h1>
   <div id="cartMasterSummary" class="mb-5"></div>
 
