--- a/project/homepage/contacts.html
+++ b/project/homepage/contacts.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-<div class="container">
+<div class="container2">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -43,7 +43,7 @@
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
     
-<div class="container">
+<div class="container2">
     <h2 class="text-center mb-4">Contact Submission Form</h2>
 
     <form id="contactForm">
