--- a/project/homepage/licensetypes.html
+++ b/project/homepage/licensetypes.html
@@ -44,7 +44,7 @@
 
     
 
-<div class="container py-4">
+<div class="container2 py-4">
 
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2>License Types</h2>
