--- a/project/homepage/mycart.html
+++ b/project/homepage/mycart.html
@@ -53,7 +53,7 @@
 </section>
 
 <!-- CART CONTENT -->
-<div class="container py-5">
+<div class="container2 py-5">
     <div id="cart-items" class="row g-4 mb-4"></div>
 
     <div class="text-center">
