--- a/project/homepage/sitemap.html
+++ b/project/homepage/sitemap.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-<div class="container">
+<div class="container2">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn" style="background-color: black;">Menu ▼</button>
