--- a/project/homepage/testimonials.html
+++ b/project/homepage/testimonials.html
@@ -26,7 +26,7 @@
   </style>
 </head>
 <body>
-<div class="container">
+<div class="container2">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -60,7 +60,7 @@
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
   
-  <div class="container py-5">
+  <div class="container2 py-5">
     <h1 class="mb-4 text-center">Testimonials</h1>
 
     <table class="table table-striped-green table-bordered text-center align-middle">
