--- a/project/homepage/userhelp.html
+++ b/project/homepage/userhelp.html
@@ -43,7 +43,7 @@
 </header>
 
     
-<div class="container">
+<div class="container2">
     <h2 class="text-center mb-4">User Help - Trouble Ticket</h2>
 
     <form id="ticketForm">
