--- a/project/homepage/usernotices.html
+++ b/project/homepage/usernotices.html
@@ -27,7 +27,7 @@
         .table tbody tr:hover {
             background-color: #222;
         }
-        .container {
+        .container2 {
             margin-top: 40px;
         }
         .notice-type {
@@ -39,7 +39,7 @@
 
 </head>
 <body class="bg-light" style="background-color: black">
-<div class="gacontainer">
+<div class="gacontainer2">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -74,7 +74,7 @@
 
 <body>
 
-<div class="container">
+<div class="container2">
     <h2 class="text-center mb-4">User Notices</h2>
 
     <table class="table table-bordered table-striped" id="noticesTable">
