--- a/assignments/9-loops/index.html
+++ b/assignments/9-loops/index.html
@@ -45,17 +45,16 @@
 <BR><BR>
 <div class="row">
   <div class="column" style="background-color:#aaa; border: 2px solid black;" onclick="callupdategeometry();">
-    <h2>Geometry</h2>
-    <p id="outputtarget"><img id="sometriangle" src="./images/triangle.png" style="visibility: hidden;"></p>
+    <h2>Tank1</h2>
+    <p id="outputtarget"><img id="tank1" src="./images/fishtank.jpeg" style="visibility: hidden;"></p>
     </div>
   <div class="column" style="background-color:#bbb; border: 2px solid black;">
-    <h2>Select a Date:</h2>
-    <input type="date" id="somedayid" name="somedayname" onchange="calltextupdate();">
-    <p id="outputtext"></p>
-   </div>
+    <h2>Tank2</h2>
+    <p><img id="tank2" src="./images/fishtank.jpeg"</p>
+  </div>
   <div class="column" style="background-color:#ccc; border: 2px solid black;" onclick="callimageframer();">
-    <h2>Frame Image</h2>
-    <p><img id="sunshineimage" src="./images/sunshine.png"</p>
+    <h2>Tank3</h2>
+    <p><img id="tank2" src="./images/fishtank.jpeg"</p>
   </div>
 </div>
 </section>
