--- a/assignments/9-loops/index.html
+++ b/assignments/9-loops/index.html
@@ -6,9 +6,9 @@
     <title>USC242 HomePage</title>
 
     <!-- Top menu bar -->
-    <link rel="stylesheet" href="site.css">
+    <link rel="stylesheet" href="./css/site.css">
     <!-- Inner flex layout -->
-    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="./css/layout.css">
 <style>
 </style>
 </head>
